--- a/doc/misc/org.texi
+++ b/doc/misc/org.texi
@@ -5,7 +5,7 @@
 @settitle The Org Manual
 
 @set VERSION 7.8.11
-@set DATE mai 2012
+@set DATE May 2012
 
 @c Use proper quote and backtick for code sections in PDF output
 @c Cf. Texinfo manual 14.2
