--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-26  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* lread.c (read1): Simplify slightly to avoid an overflow warning
+	with GCC 4.7.0 on x86-64.
+
 2012-05-26  Eli Zaretskii  <eliz@gnu.org>
 
 	* bidi.c (bidi_mirror_char): Revert last change: an int is
