Use `declare' in `lambda' and mis minor changes. * lisp/subr.el (lambda): Use declare. * lisp/emacs-lisp/lisp-mode.el (lambda): * lisp/emacs-lisp/edebug.el (lambda): Move properties to its definition. * lisp/gnus/legacy-gnus-agent.el (gnus-agent-unhook-expire-days): * lisp/gnus/gnus-demon.el (gnus-demon-init): Don't bother with type-of.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (lambda): Use declare.
+	* emacs-lisp/lisp-mode.el (lambda):
+	* emacs-lisp/edebug.el (lambda): Move properties to its definition.
+
 2012-05-26  Aaron S. Hawley  <aaron.s.hawley@gmail.com>
 
 	* thingatpt.el (forward-same-syntax): Handle no ARG case.  (Bug#11560)
