* lisp/subr.el (buffer-has-markers-at): Mark obsolete.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -305,6 +305,7 @@ must be in the range 1000..9999.  It now works with any year supported
 by the underlying C implementation.
 
 ** `automount-dir-prefix' is obsolete.
+** `buffer-has-markers-at' is obsolete.
 
 * Changes in Emacs 24.2 on non-free operating systems
 
