--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-26  Glenn Morris  <rgm@gnu.org>
+
+	* paths.el (Info-default-directory-list): Make it a defcustom,
+	mainly so that we can use custom-initialize-delay.
+
 2012-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* subr.el (buffer-has-markers-at): Mark obsolete.
