Don't mess with INFOPATH in ns builds
It's not necessary, and would break if INFOPATH was already set (bug#2791).
Ref also
http://lists.gnu.org/archive/html/emacs-devel/2009-05/msg00035.html
http://lists.gnu.org/archive/html/emacs-devel/2005-06/msg00064.html

* lisp/paths.el (Info-default-directory-list):
* lisp/info.el (info-initialize): For self-contained NS builds, put the
included info/ directory at the front. 

* src/nsterm.m (ns_init_paths): Don't mess with INFOPATH.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,9 @@
 2012-05-26  Glenn Morris  <rgm@gnu.org>
 
+	* paths.el (Info-default-directory-list):
+	* info.el (info-initialize): For self-contained NS builds, put the
+	included info/ directory at the front.  (Bug#2791)
+
 	* paths.el (Info-default-directory-list): Make it a defcustom,
 	mainly so that we can use custom-initialize-delay.
 
