--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,14 @@
+2012-05-27  Glenn Morris  <rgm@gnu.org>
+
+	* ack.texi, anti.texi, basic.texi, buffers.texi, building.texi:
+	* cmdargs.texi, commands.texi, display.texi, emacs.texi:
+	* entering.texi, files.texi, fixit.texi, frames.texi, glossary.texi:
+	* gnu.texi, help.texi, indent.texi, killing.texi, kmacro.texi:
+	* m-x.texi, macos.texi, maintaining.texi, mark.texi, mini.texi:
+	* misc.texi, modes.texi, msdog.texi, mule.texi, programs.texi:
+	* regs.texi, screen.texi, search.texi, text.texi, trouble.texi:
+	* windows.texi, xresources.texi: Nuke hand-written node pointers.
+
 2012-05-22  Glenn Morris  <rgm@gnu.org>
 
 	* emacs.texi (Acknowledgments): Add another contributor.
