--- a/doc/lispref/markers.texi
+++ b/doc/lispref/markers.texi
@@ -2,7 +2,7 @@
 @c This is part of the GNU Emacs Lisp Reference Manual.
 @c Copyright (C) 1990-1995, 1998-1999, 2001-2012 Free Software Foundation, Inc.
 @c See the file elisp.texi for copying conditions.
-@node Markers, Text, Positions, Top
+@node Markers
 @chapter Markers
 @cindex markers
 
