--- a/doc/lispref/variables.texi
+++ b/doc/lispref/variables.texi
@@ -2,7 +2,7 @@
 @c This is part of the GNU Emacs Lisp Reference Manual.
 @c Copyright (C) 1990-1995, 1998-2012 Free Software Foundation, Inc.
 @c See the file elisp.texi for copying conditions.
-@node Variables, Functions, Control Structures, Top
+@node Variables
 @chapter Variables
 @cindex variable
 
