--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-05-27  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* bidi.c (bidi_mirror_char): Don't possibly truncate the integer
+	before checking whether it's out of range.  Put the check inside
+	eassert.  See
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-05/msg00485.html>.
+
 2012-05-27  Ken Brown  <kbrown@cornell.edu>
 
 	* callproc.c (Fcall_process): Restore a line that was accidentally
