--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-27  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* unexmacosx.c (copy_data_segment): Truncate after 16 characters
+	when referring to sectname field in printf format.
+
 2012-05-27  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lisp.h [REL_ALLOC]: Omit duplicate prototypes.
