Fix the MSDOS build following gnulib update.
 config.bat (lib): Create/update lib/stdalign.in-h and
 lib/sys_types.in-h.
 msods/sedlibmk.inp (GNULIB_GL_UNISTD_H_GETOPT, GNULIB_POSIX_OPENPT)
 (GNULIB_ISATTY, GNULIB_PTSNAME_R, GNULIB_RANDOM)
 (GNULIB_SETHOSTNAME, HAVE_POSIX_OPENPT, HAVE_PTSNAME_R)
 (HAVE_RANDOM, HAVE_SETHOSTNAME, NEXT_SYS_TYPES_H)
 (NEXT_AS_FIRST_DIRECTIVE_SYS_TYPES_H, REPLACE_FTRUNCATE)
 (REPLACE_ISATTY, REPLACE_PTSNAME_R, REPLACE_RANDOM_R)
 (REPLACE_STRTOIMAX, STDALIGN_H, WINDOWS_64_BIT_OFF_T)
 (WINDOWS_64_BIT_ST_SIZE, GL_GENERATE_STDALIGN_H_TRUE)
 (GL_GENERATE_STDALIGN_H_FALSE): Edit as appropriate for DJGPP.
 (cat FOO): Edit into "sed -e '' FOO >>".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-27  Eli Zaretskii  <eliz@gnu.org>
 
+	* config.bat (lib): Create/update lib/stdalign.in-h and
+	lib/sys_types.in-h.
+
 	* lib/makefile.w32-in ($(BLD)/md5.$(O)): 
 	($(BLD)/sha1.$(O)): 
 	($(BLD)/sha256.$(O)): 
