--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-28  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/w32inevt.$(O), $(BLD)/w32console.$(O)):
+	Update dependencies.
+
 2012-05-27  Eli Zaretskii  <eliz@gnu.org>
 
 	* bidi.c (bidi_mirror_char): Fix last change.
