--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/vhdl-mode.el: Sync with upstream 3.33.28.
+	http://www.iis.ee.ethz.ch/~zimmi/emacs/vhdl-mode.html#release-notes-3.33
+
 2012-05-27  Juanma Barranquero  <lekktu@gmail.com>
 
 	* version.el (motif-version-string, gtk-version-string)
@@ -14,9 +19,9 @@
 
 2012-05-27  Eli Zaretskii  <eliz@gnu.org>
 
-	* mail/sendmail.el (mail-yank-region): Recognize
-	rmail-yank-current-message in addition to insert-buffer.  Fixes
-	mail-mode's "C-c C-r" that otherwise does nothing when invoked in
+	* mail/sendmail.el (mail-yank-region):
+	Recognize rmail-yank-current-message in addition to insert-buffer.
+	Fixes mail-mode's "C-c C-r" that otherwise does nothing when invoked in
 	a *mail* buffer created through rmail-start-mail with sendmail as
 	mail-user-agent.
 
