--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-28  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* bidi.c (bidi_mirror_char): Put eassert before conversion to int.
+	This avoids undefined behavior that might cause the eassert
+	to not catch an out-of-range value.
+
 2012-05-28  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/w32inevt.$(O), $(BLD)/w32console.$(O)):
