Remove HAVE_SYSINFO from nt/config.nt, followup to revno 108401.
 nt/config.nt (HAVE_SYSINFO): Remove; unused.

--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-28  Eli Zaretskii  <eliz@gnu.org>
+
+	* config.nt (HAVE_SYSINFO): Remove; unused.
+
 2012-05-27  Eli Zaretskii  <eliz@gnu.org>
 
 	* inc/stdalign.h: New file.
