* emacs/ack.texi, emacs/building.texi, emacs/calendar.texi * emacs/custom.texi, emacs/maintaining.texi, emacs/text.texi: * misc/calc.texi, misc/dired-x.texi: Use @LaTeX rather than La@TeX.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-28  Glenn Morris  <rgm@gnu.org>
+
+	* ack.texi, building.texi, calendar.texi, custom.texi:
+	* maintaining.texi, text.texi: Use @LaTeX rather than La@TeX.
+
 2012-05-27  Glenn Morris  <rgm@gnu.org>
 
 	* emacs.texi: Simplify following removal of node pointers.
